--- a/AA1_05 PROJECTOS/AA1_05/AA1_05.vcxproj
+++ b/AA1_05 PROJECTOS/AA1_05/AA1_05.vcxproj
@@ -129,10 +129,12 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MathContent.cpp" />
+    <ClCompile Include="Panel.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MathContent.h" />
+    <ClInclude Include="Panel.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
